--- a/style/style.css
+++ b/style/style.css
@@ -4,8 +4,9 @@
 }
 
 body {
-    max-width: 1650px;
+    max-width: 1400px;
     margin: 0 auto;
+    padding:0 50px;
     font-family: "Inter", sans-serif;
 }
 
@@ -43,7 +44,7 @@ span.logo-child-vpn {
 
 ul.nav-ul-container {
     display: flex;
-    font-size: 20px;
+    font-size: 17px;
 }
 
 ul.nav-ul-container a {
@@ -51,7 +52,7 @@ ul.nav-ul-container a {
     color: black;
     list-style: none;
     display: flex;
-    padding: 0px 45px;
+    padding: 0px 35px;
 }
 
 
