--- a/style/style.css
+++ b/style/style.css
@@ -6,10 +6,14 @@
 body {
     max-width: 1400px;
     margin: 0 auto;
-    padding:0 50px;
+    padding: 0 50px;
     font-family: "Inter", sans-serif;
 }
 
+/* sheared style */
+.descriptions {
+    color: #4F5665;
+}
 
 
 /* header style */
@@ -20,18 +24,22 @@ nav.nav-container {
     align-items: center;
     justify-content: space-between;
 }
+
 /* logo style */
 .logo-container {
     display: flex;
     align-items: center;
 }
+
 span.text-logo {
     font-size: 25px;
 }
+
 .logo-container img {
     width: 30px;
     margin-right: 6px;
 }
+
 span.logo-child-vpn {
     font-weight: 600;
 }
@@ -65,6 +73,7 @@ button.btn-sign-in {
     color: black;
     background: transparent;
 }
+
 button.btn-sign-up {
     padding: 10px 20px;
     background: transparent;
@@ -73,6 +82,32 @@ button.btn-sign-up {
     font-size: 20px;
     color: red;
 }
+
 /* nav style end */
 
+/* header container style  */
+.header-container-parent {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+}
 
+.header-container {
+    max-width: 580px;
+}
+
+h2.header-container-header {
+    font-size: 50px;
+}
+
+span.header-container-header-child {
+    font-weight: 900;
+}
+
+.header-container img {
+    width: 580px;
+}
+p.header-container-description.descriptions {
+    margin-top: 20px;
+}
