--- a/style/style.css
+++ b/style/style.css
@@ -17,7 +17,8 @@ p.feature-item-description,
 p.subtitle.description,
 p.feature-description,
 p.plan-features-descriptions,
-p.static-label {
+p.static-label, 
+span.date-time-on-cart {
     color: #4F5665;
 }
 
@@ -203,10 +204,6 @@ h2.title.section-heading {
     text-align: center;
 }
 
-.plan-card {
-
-    margin: 0 auto;
-}
 
 img.card-icon {
     width: 150px;
@@ -234,7 +231,35 @@ img.plan-features-icon {
     width: 20px;
 }
 .plan-card {
-    border-radius: 43px;
-    border: solid gray 3px;
-    padding: 100px 80px;
+    margin: 0 auto;
+    border-radius: 20px;
+    border: solid red 3px;
+    padding: 50px 80px;
+    margin-bottom: 50px;
 }
+span.plan-price {
+    font-weight: 700;
+}
+button.cart-selector-button {
+    padding: 12px 32px;
+    font-weight: 400;
+    font-size: 20px;
+    border: 2px solid red;
+    border-radius: 30px;
+    color: red;
+    margin-top: 10px;
+    
+}
+button.cart-selector-button:focus{
+    background: red;
+    color: white;
+}
+div#price-button-container-parent-1 {
+    position: relative;
+    top: 80px;
+}
+div#price-button-container-parent-2 {
+    position: relative;
+    top: 40px;
+}
+
