--- a/style/style.css
+++ b/style/style.css
@@ -251,6 +251,7 @@ button.cart-selector-button {
     border-radius: 30px;
     color: red;
     margin-top: 10px;
+    background-color: transparent;
 
 }
 
