--- a/style/style.css
+++ b/style/style.css
@@ -269,3 +269,26 @@ div#price-button-container-parent-2 {
     position: relative;
     top: 40px;
 }
+
+
+/* global style sheet */
+
+div#global-net h2 {
+    width: 335px;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+span.global-descripts {
+    font-weight: 800;
+    margin-top: 10px;
+}
+/* global style end */
+/* map style sheet */
+.map-container {
+    text-align: center;
+}
+img.map-image {
+    width: 100%;
+    /* margin-top: 100px; */
+}
